# autoware.universe

./: .pre-commit-config.yaml
.github/workflows/: build-and-test-arm-pr.yaml  build-and-test-pr.yaml  build-and-test-scheduled.yaml  delete-closed-pr-docs.yaml  deploy-docs.yaml  spell-check.yaml  sync-awf-latest.yml
common/interpolation/src/: spline_interpolation.cpp
common/osqp_interface/src/: csc_matrix_conv.cpp  osqp_interface.cpp
common/osqp_interface/test/: test_osqp_interface.cpp
perception/lidar_based_velocity_updater/: CMakeLists.txt  package.xml
perception/lidar_based_velocity_updater/include/lidar_based_velocity_updater/: adaptive_cruise_control.hpp  debug_marker.hpp  lidar_based_velocity_updater_core.hpp  node.hpp
planning/behavior_velocity_planner/src/: node.cpp
planning/obstacle_avoidance_planner/: CMakeLists.txt  README.md  package.xml
planning/obstacle_avoidance_planner/config/: obstacle_avoidance_planner.param.yaml
planning/obstacle_avoidance_planner/scripts/: simple_trajectory.py  trajectory_visualizer.py
planning/obstacle_avoidance_planner/src/: costmap_generator.cpp  cv_utils.cpp  debug_visualization.cpp  eb_path_optimizer.cpp  mpt_optimizer.cpp  node.cpp  object_filter.cpp  process_cv.cpp  util.cpp  utils.cpp
planning/obstacle_stop_planner/src/: node.cpp
planning/obstacle_velocity_planner/: CMakeLists.txt  package.xml
planning/obstacle_velocity_planner/config/: obstacle_velocity_planner.param.yaml  plot_juggler_obstacle_velocity_planner.xml  test.xml
planning/obstacle_velocity_planner/src/: node.cpp  polygon_utils.cpp  (+2 more)
(+38 files in other folders)
